--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,10 @@ body {
 nav {
   padding: 60px 30px 0px 30px;
   flex: var(--sidebar-flex);
-  background: rgb(238, 103, 143);
+  background: rgb(67, 34, 214);
   background: linear-gradient(
     180deg,
-    rgba(238, 103, 143, 1) 50%,
+    rgb(67, 34, 214) 50%,
     rgba(132, 124, 252, 1) 80%
   );
 }
@@ -74,4 +74,82 @@ nav ul li {
 
 .active {
   font-weight: bolder;
+}
+
+.social {
+  position: absolute;
+  margin-top: 20px;
+  display: flex;
+  bottom: 60px;
+}
+
+.icon {
+  padding: 30px 10px;
+  height: 30px;
+  width: 30px;
+  color: #9a9b9c;
+}
+
+.icon:hover {
+  color: #000000;
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.profilepic {
+  border-radius: 50%;
+  width: 200px;
+  margin: 30px;
+}
+.typingeffect {
+  font-size: var(--typing-font);
+  margin-bottom: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+@media all and (max-width: 450px) {
+  :root {
+    --fontsize-nav: 1rem;
+    --sidebar-flex: 0;
+    --typing-font: 2rem;
+  }
+  .App {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    padding: 30px;
+    background: rgb(67, 34, 214);
+    background: linear-gradient(
+      90deg,
+      rgb(67, 34, 214) 50%,
+      rgba(132, 124, 252, 1) 80%
+    );
+  }
+  .condiv {
+    padding: 50px;
+  }
+  nav ul {
+    display: flex;
+  }
+  nav ul li {
+    margin: 10px;
+  }
+  .social {
+    left: 0;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    bottom: 30px;
+  }
+  .social i {
+    padding-right: 0px;
+  }
 }
